<?xml version="1.0"?>
<package format="2">
  <name>ibvs_control</name>
  <version>0.0.0</version>
  <description>The ibvs_control package</description>

  <maintainer email="skywoodsz@todo.todo">skywoodsz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>dynamic_reconfigure</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
